--- a/server.html
+++ b/server.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,14 +12,11 @@
             text-align: center;
             padding: 50px;
         }
-
         h1 {
             color: cyan;
         }
-
         .button {
-            background-color: #5865F2;
-            /* Discord blue */
+            background-color: #5865F2; /* Discord blue */
             color: white;
             padding: 15px 30px;
             font-size: 20px;
@@ -30,47 +26,40 @@
             text-decoration: none;
             display: inline-block;
         }
-
         .button:hover {
             background-color: #4752C4;
         }
-
         .rules {
             list-style-type: none;
             padding: 0;
         }
-
         .rules li {
             background-color: #333;
             padding: 10px;
             margin: 10px 0;
             border-radius: 5px;
         }
-
         .prohibited {
-            color: #8B0000;
-            /* Dark red for "PROHIBITED" */
+            color: #8B0000; /* Dark red for "PROHIBITED" */
         }
     </style>
 </head>
-
 <body>
-    <h1>Welcome to ****** Foundation SCP:SL Server!</h1>
-    <p>***** the button below to join our Discord:</p>
-    <p><a href="https://discord.gg/mQ6SRbajhY" class="button">Join Discord</a></p>
+    <h1>Welcome to Israel Foundation SCP:SL Server!</h1>
+    <p>Click the button below to join our Discord:</p>
+    <a href="https://discord.gg/mQ6SRbajhY" class="button">Join Discord</a>
+    
     <h2>📜 Server Rules:</h2>
     <ul class="rules">
-        <li>&bull; Cheating is <span class="prohibited">PROHIBITED</span></li>
-        <li>&bull; Ghosting is <span class="prohibited">PROHIBITED</span></li>
-        <li>&bull; Mic Spamming (earape, ********** spam) ** <span class="prohibited">PROHIBITED</span></li>
-        <li>&bull; Teaming is <span class="prohibited">PROHIBITED</span></li>
-        <li>&bull; Camping, spawn ******* is <span class="prohibited">PROHIBITED</span></li>
-        <li>&bull; Trolling/******** is <span class="prohibited">PROHIBITED</span></li>
-        <li>&bull; Suiciding after the start of the ***** ** <span class="prohibited">PROHIBITED</span></li>
+        <li>• Cheating is <span class="prohibited">PROHIBITED</span></li>
+        <li>• Ghosting is <span class="prohibited">PROHIBITED</span></li>
+        <li>• Mic Spamming (earrape, soundboard spam) is <span class="prohibited">PROHIBITED</span></li>
+        <li>• Teaming is <span class="prohibited">PROHIBITED</span></li>
+        <li>• Camping, spawn killing is <span class="prohibited">PROHIBITED</span></li>
+        <li>• Trolling/griefing is <span class="prohibited">PROHIBITED</span></li>
+        <li>• Suiciding after the start of the round is <span class="prohibited">PROHIBITED</span></li>
     </ul>
-    <p>Enjoy **** stay!</p>
-
-<div style="color: red">Word to HTML trial - please <a href="https://wordtohtml.net/site/payment">Go PRO</a> to get whole HTML.</div>
+    
+    <p>Enjoy your stay!</p>
 </body>
-
 </html>
